# llm-lab-jupyter

./: pyproject.toml
notebook/langchain-lab/: test01.ipynb
notebook/qdrant/: test01.ipynb  test02.ipynb
notebook/qdrant/assets/test_index/: meta.json
notebook/qdrant/assets/test_index/collection/my_collection/: storage.sqlite
notebook/qdrant/assets/wiki/: meta.json
notebook/qdrant/assets/wiki/collection/my_documents/: storage.sqlite
