[tool.poetry]
name = "llm-lab-jupyter"
version = "0.1.0"
description = ""
authors = ["nnao45 <n4sekai5y@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_lab_jupyter"}]

[tool.poetry.dependencies]
python = "3.11.3"
openai = "^0.27.8"
langchain = "^0.0.195"
jupyter = "^1.0.0"
duckduckgo-search = "^3.8.3"
python-dotenv = "^1.0.0"
qdrant-client = "^1.3.1"
wikipedia = "^1.4.0"
tiktoken = "^0.4.0"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
